Appmod/java upgrade 20260326194247 (#9)
* added .metadata to gitignore

* Update dependencies and upgrade Java version to 11

* Step 1: Setup Environment - Compile: N/A (no compilation done)

- Added maven-compiler-plugin 3.13.0 to jsystem-parent/pom.xml
- JDK 25.0.2 already installed at /usr/lib/jvm/java-25-openjdk-amd64
- Maven 3.8.7 running on JDK 25 (adequate for Java 25 compilation)

* Step 3: Upgrade Java Compiler Target to 25 + Apply Version Bump - Compile: FAILURE

- Updated maven.compiler.source/target from 11 to 25 in jsystem-parent/pom.xml
- Applied version bump 6.1.17-SIKLU -> 6.1.18-SIKLU across all module POMs
- Updated archetype resource POMs to compiler source/target 25
- Known: 214 compile errors in jsystemCore (pre-existing, to be fixed in Steps 4-6)

* Step 4: Fix javax.* to jakarta.* API Migrations - Compile: FAILURE (152 errors remain)

- Migrated MailUtil.java: javax.activation.*/javax.mail.* -> jakarta.activation.*/jakarta.mail.*
- Migrated MailMessage.java: javax.mail.* -> jakarta.mail.*
- Fixed JTestContainer.java: javax.mail.MethodNotSupportedException -> jakarta.mail
- Fixed JUnitReporter.java: javax.xml.bind.* -> jakarta.xml.bind.*
- Added jakarta.activation-api, angus-mail, jakarta.xml.bind-api, jaxb-impl deps
- Removed com.sun.net.ssl.internal.ssl.Provider usage in MailUtil (replaced with comment)
- Remaining: sun.misc.BASE64, ASM EmptyVisitor, httpclient3.x, qdox, JFreeChart, Jython errors

* Step 5: Fix Removed Internal JDK APIs - Compile: FAILURE (148 errors remain)

- Fixed Encryptor.java: replaced sun.misc.BASE64Encoder/Decoder with java.util.Base64
- MailUtil.java sun.misc.SSL Provider already removed in Step 4
- Remaining: httpclient3.x (DifidoClient, UploadRunner), qdox, JFreeChart, ASM, Jython

* Step 6: Fix Third-Party Library API Incompatibilities - Compile: SUCCESS, Tests: passed

- Fixed WaitDialog.java: removed sun.awt.AppContext usage (removed in JDK 11+)
- Fixed ScenarioTreeNode.java: children() return type Enumeration<?